--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -3263,16 +3263,18 @@ button.swiper-pagination-bullet {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  gap: 20px;
 }
 
 .spa-grid__container {
   padding: 60px 100px;
-  -moz-column-count: 3;
-  -webkit-column-count: 3;
-  column-count: 3;
   gap: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 .spa-grid__item {
@@ -3296,6 +3298,10 @@ button.swiper-pagination-bullet {
   max-height: 1000px;
   padding: 15px 30px;
   opacity: 1;
+}
+
+.spa-grid__column2 {
+  display: none;
 }
 
 .spa-grid__img {
@@ -3391,7 +3397,9 @@ button.swiper-pagination-bullet {
 }
 
 .spa-grid__prices span {
+  padding-left: 10px;
   font-weight: 700;
+  white-space: nowrap;
 }
 
 .spa-grid__session {
@@ -3706,10 +3714,12 @@ button.swiper-pagination-bullet {
 }
 
 @media screen and (max-width: 1430px) {
-  .spa-grid__container {
-    -moz-column-count: 2;
-    -webkit-column-count: 2;
-    column-count: 2;
+  .spa-grid__column2 {
+    display: block;
+  }
+
+  .spa-grid__column3 {
+    display: none;
   }
 }
 
@@ -4339,9 +4349,6 @@ button.swiper-pagination-bullet {
         -ms-flex-direction: column;
             flex-direction: column;
     padding: 40px 100px;
-    -webkit-column-count: 1;
-       -moz-column-count: 1;
-            column-count: 1;
   }
 
   .floating-grid__container {
@@ -4354,9 +4361,13 @@ button.swiper-pagination-bullet {
 
   .spa-grid__container {
     padding: 40px 100px;
-    -webkit-column-count: 1;
-       -moz-column-count: 1;
-            column-count: 1;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
   }
 
   .popup__content {
@@ -4606,7 +4617,7 @@ button.swiper-pagination-bullet {
   }
 
   .header1__container {
-    padding: 30px 40px 169px 40px;
+    padding: 30px 40px 85px 40px;
   }
 
   .header1__menu {
@@ -4776,7 +4787,7 @@ button.swiper-pagination-bullet {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    gap: 50px;
+    gap: 30px;
   }
 
   .header1__promo {
@@ -5302,7 +5313,7 @@ button.swiper-pagination-bullet {
   }
 
   .header1__container {
-    padding: 30px 10px 169px 10px;
+    padding: 30px 10px 85px 10px;
   }
 
   .gift-faq {
